5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1601_1800.log
== TEST (2019-03-24 11:12:49) 
-- CODE:
import math
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(eq)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:13:12) 
-- CODE:
import math
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:13:18) 
-- CODE:
import math
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,6))

-- EXECUTION TIME:
0.134563
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:13:54) 
-- CODE:
import math pow
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,6))

-- ERROR:
File "XXXX", line 1
    import math pow
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:15:43) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (math.pow(a,2)+math.pow(b,2)+math.pow(c,2))/(a+b+c)

print(round(eq,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:15:50) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (math.pow(a,2)+math.pow(b,2)+math.pow(c,2))/(a+b+c)

print(round(eq,6))

-- EXECUTION TIME:
0.190064
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:20:49) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq,6))

-- EXECUTION TIME:
0.156909
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:21:15) 
-- CODE:
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq, 6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:21:22) 
-- CODE:
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq, 6))

-- EXECUTION TIME:
0.189988
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:21:29) 
-- CODE:
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq, ))

-- OUTPUT:
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:21:36) 
-- CODE:
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:21:38) 
-- CODE:
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq, 7))

-- EXECUTION TIME:
0.127185
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:23:48) 
-- CODE:
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = ((a**2)+(b**2)+(c**2))/(a+b+c)

print(round(eq, 7))

-- EXECUTION TIME:
0.134185
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:23:56) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,6))


-- EXECUTION TIME:
0.159362
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:24:10) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,6))


-- EXECUTION TIME:
0.131547
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:24:17) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,7))


-- EXECUTION TIME:
0.208649
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:37:06) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,7))


-- EXECUTION TIME:
0.155519
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:17:47) 
-- CODE:
import math 
a = float(input("a = "))
b = float(input("b = "))
c = float(input("c = "))

eq = (pow(a,2)+pow(b,2)+pow(c,2))/(a+b+c)

print(round(eq,7))


-- EXECUTION TIME:
0.208528
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
